arreglos y mejoras proyecto entero
